// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider borderColor prop sets borderColor 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #007aff;
  margin-left: 0px;
  margin-right: 0px;
}

<hr
  className="c0"
  color="border"
/>
`;

exports[`Divider m prop sets margin 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #c0cad5;
  margin: 8px;
  margin-left: 0px;
  margin-right: 0px;
}

<hr
  className="c0"
  color="border"
/>
`;

exports[`Divider renders 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #c0cad5;
  margin-left: 0px;
  margin-right: 0px;
}

<hr
  className="c0"
  color="border"
/>
`;

exports[`Divider width prop sets width 1`] = `
.c0 {
  border: 0;
  border-bottom-style: solid;
  border-bottom-width: 1px;
  border-color: #c0cad5;
  margin-left: 0px;
  margin-right: 0px;
  width: 50%;
}

<hr
  className="c0"
  color="border"
  width={0.5}
/>
`;
